Fix horizontal scrollbar using max-width

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 
 .App {
-    display: flex;
-    justify-content: center;
+    width: 100vw;
+    max-width: 100%;
 }
