--- a/src/components/Projects.scss
+++ b/src/components/Projects.scss
@@ -1,7 +1,7 @@
 
 .Projects {
-    width: 100vw;
-    display: grid;
+    width: 100%;
+    // display: grid;
 
     @media screen and (min-width: 800px) {
         
